# yt-url-extractor

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py  config.py  extractor.py  models.py
tests/: test_extractor.py
