[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "youtube-url-extractor"
version = "1.0.0"
description = "Extrae URLs de YouTube desde listas de canciones en TXT o DOCX"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2023.0.0",
    "python-docx>=1.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
